--- a/wp-content/themes/flatsome-child/assets/css/bta.scss
+++ b/wp-content/themes/flatsome-child/assets/css/bta.scss
@@ -237,8 +237,10 @@ body .nav-pagination>li>span{
                 padding-bottom: 80px;
             }
         }
+        .section-title-normal,
         .section-title-center,
         .section-title-bold-center{
+            border-color: transparent;
             b{
                 visibility: hidden;
             }
@@ -698,7 +700,11 @@ form{
         }
     }
 }
-
+.adminz_countdown{
+    h3{
+        margin-bottom: 0;
+    }
+}
 
 
 // Woo
