--- a/wp-content/themes/flatsome-child/assets/css/bta.scss
+++ b/wp-content/themes/flatsome-child/assets/css/bta.scss
@@ -422,6 +422,9 @@ form{
                 border-bottom-right-radius: 10px;
                 padding: 5px 15px;
                 font-weight: 500;
+                .post-date-day{
+                    font-size: 1.5em;
+                }
             }
         }
     }
