--- a/wp-content/themes/flatsome-child/assets/css/bta.scss
+++ b/wp-content/themes/flatsome-child/assets/css/bta.scss
@@ -361,16 +361,19 @@ body .nav-pagination>li>span{
 }
 
 form{
+    textarea{
+        border-radius: 10px !important;
+    }
     input{
         line-height: 50px !important;
         min-height: 50px !important;
-        border-radius: 15px !important;
+        border-radius: 10px !important;
     }
 
     [type="submit"]{
         line-height: 50px !important;
         min-height: 50px !important;
-        border-radius: 15px !important;
+        border-radius: 10px !important;
         box-sizing: border-box;
     }
 
@@ -393,11 +396,10 @@ form{
     }
     .search_categories{
         position: absolute;
-        right: 110px;
+        right: 120px;
         z-index: 1;
         top: 50%;
         transform: translateY(-50%);
-        background: none;
         border: none;
         box-shadow: unset;
         &:focus{
@@ -553,11 +555,37 @@ form{
 }
 
 .bta_tabs{
-    >.tabbed-content{
-        .tab-panels{
+    &.divider-tab-panels {
+        >.tabbed-content{
+            .tab-panels{
+                padding-top: 50px;
+                position: relative;
+            
+                &:before {
+                    content: "";
+                    position: absolute;
+                    width: 100%;
+                    height: 1px;
+                    background: var(--light-gray-color);
+                    top: 20px;
+                }
+            
+                &:after {
+                    content: "";
+                    position: absolute;
+                    width: 100%;
+                    height: 1px;
+                    background: var(--light-gray-color);
+                    top: 16px;
+                }
+            }
+        }
+    }
+    &.divider-tab-content{
+        >.tabbed-content {
             padding-top: 50px;
             position: relative;
-            &:before{
+            &:before {
                 content: "";
                 position: absolute;
                 width: 100%;
@@ -565,7 +593,8 @@ form{
                 background: var(--light-gray-color);
                 top: 20px;
             }
-            &:after{
+        
+            &:after {
                 content: "";
                 position: absolute;
                 width: 100%;
@@ -574,27 +603,22 @@ form{
                 top: 16px;
             }
         }
+    }
+    >.tabbed-content{
         >h4{
-            display: -webkit-box;
-            -webkit-line-clamp: 1;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            text-transform: unset;
-            font-size: 1.2em;
             @media(min-width: 850px) {
-                font-size: 30px;
                 width: 30%;
-                margin-bottom: 0;
-                line-height: 45px;
             }
         }
         >ul{
             white-space: nowrap;
             overflow: auto;
             display: block;
-            @media(min-width: 850px) {
-                width: 70%;
-                text-align: right;
+            &:nth-child(2){
+                @media(min-width: 850px) {
+                    width: 70%;
+                    text-align: right;
+                }
             }
             li{
                 a{
@@ -604,6 +628,20 @@ form{
                     }
                 }
             }
+        }
+    }
+    h4 {
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-transform: unset;
+        font-size: 1.2em;
+
+        @media(min-width: 850px) {
+            font-size: 30px;
+            margin-bottom: 0;
+            line-height: 45px;
         }
     }
     .nav{
@@ -617,6 +655,30 @@ form{
                 background: var(--primary-color);
             }
         }
+    }
+
+    .adminz_countdown{
+        .col{
+            padding-bottom: 0px;
+            .col-inner{
+                border-radius: 10px;
+            }
+            h3 {
+                font-weight: 600;
+                font-size: 16px;
+            }
+            &:not(:last-child){
+                h3{
+                    position: relative;
+                    &:before {
+                        content: ":";
+                        position: absolute;
+                        right: -11px;
+                    }
+                }
+            }
+        }
+        
     }
 }
 
