--- a/wp-content/themes/flatsome-child/assets/css/bta.css
+++ b/wp-content/themes/flatsome-child/assets/css/bta.css
@@ -700,6 +700,7 @@ form .search_categories:focus {
 .badge-circle,
 .badge-outline {
   height: 30px !important;
+  margin-left: 0px !important;
 }
 
 .badge-circle .badge-inner {
