--- a/wp-content/themes/flatsome-child/assets/css/bta.scss
+++ b/wp-content/themes/flatsome-child/assets/css/bta.scss
@@ -820,6 +820,7 @@ form{
 .badge-circle,
 .badge-outline{
     height: 30px !important;
+    margin-left: 0px !important;
 }
 
 .badge-circle .badge-inner{
