--- a/wp-content/themes/flatsome-child/assets/css/bta.scss
+++ b/wp-content/themes/flatsome-child/assets/css/bta.scss
@@ -364,7 +364,12 @@ form{
     textarea{
         border-radius: 10px !important;
     }
-    input{
+    select,
+    input[type=text],
+    input[type=number],
+    input[type=password],
+    input[type=email],
+    input[type=search]{
         line-height: 50px !important;
         min-height: 50px !important;
         border-radius: 10px !important;
