--- a/wp-content/themes/flatsome-child/assets/css/bta.css
+++ b/wp-content/themes/flatsome-child/assets/css/bta.css
@@ -351,8 +351,9 @@ form .search_categories {
   z-index: 1;
   top: 50%;
   transform: translateY(-50%);
-  border: none;
+  border-color: transparent;
   box-shadow: unset;
+  background: none !important;
 }
 form .search_categories:focus {
   box-shadow: unset;
